--- a/src/components/Navbar/NewsCards/NewsCards.scss
+++ b/src/components/Navbar/NewsCards/NewsCards.scss
@@ -1,7 +1,3 @@
-.news-cards{
-
-}
-
 .news-cards__list{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -64,8 +60,7 @@
   margin-bottom: 20px;
 
   &:hover{
-    background-color: #2f9ff8;
+    background-color: #072d4b;
     color: #fff;
-    border-color: #2f9ff8;
   }
 }
