--- a/src/components/Navbar/InfoCards/InfoCards.scss
+++ b/src/components/Navbar/InfoCards/InfoCards.scss
@@ -37,14 +37,28 @@
   margin-right: 16px;
 }
 
+.info-card__img-box{
+  width: 100%;
+  height: 303px;
+  overflow: hidden;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-bottom: 20px;
+
+  &:hover .info-card__img{
+    transform: scale(1.1);
+  }
+}
+
 .info-card__img{
   width: 100%;
+  transition: all 0.4s ease;
 }
 
 .info-card__list{
   li{
     width: 100%;
-    height: 94px;
+    height: auto;
     box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
     padding: 12px 2px 12px 14px;
@@ -52,10 +66,8 @@
     display: flex;
     justify-content: space-between;
     transition: all 0.3s ease;
-
-    &:not(:last-child){
-      margin-bottom: 15px;
-    }
+    margin-bottom: 15px;
+ 
 
     &:hover{
       box-shadow: 0px 2px 20px 5px rgba(7, 45, 75, 0.2);
@@ -88,4 +100,10 @@
 
 .info-card__right{
   width: 45%;
+}
+
+.ExampleOfUsage{
+  position: relative;
+  right: -130px;
+  top: 150px;
 }
