--- a/src/components/Navbar/NewsCards/NewsCards.scss
+++ b/src/components/Navbar/NewsCards/NewsCards.scss
@@ -6,7 +6,7 @@
 
   li{
     width: 100%;
-    height: 154px;
+    height: auto;
     background: #fff;
     box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.04);
     border-radius: 4px;
@@ -14,6 +14,22 @@
     padding: 10px 8px 12px 40px;
     cursor: pointer;
     transition: all 0.3s ease;
+
+    &:nth-child(1){
+      p{
+        left: -4%;
+      }
+    }
+    &:nth-child(2){
+      p{
+        left: -2%;
+      }
+    }
+    &:nth-child(5){
+      p{
+        left: -2%;
+      }
+    }
 
     &:hover{
 
@@ -31,9 +47,8 @@
 
     p{
       position: absolute;
+      left: -7%;
       top: 40%;
-      left: -27px;
-      transform: translateY(-50%);
       transform: rotate(-90deg);
       background: rgba(217, 217, 217, 0.15);
       color: #6A8193;
@@ -47,6 +62,9 @@
 .news-cards__time{
   color: #6A8193;
   font-size: 14px;
+  position: absolute;
+  bottom: 16px;
+  right: 38%;
 }
 
 .news-cards__btn{
@@ -62,5 +80,22 @@
   &:hover{
     background-color: #072d4b;
     color: #fff;
+  }
+}
+
+.comment{
+  font-size: 12px;
+  color: #9CABB7;
+  position: relative;
+
+  &::before{
+    content: "";
+    width: 2px;
+    height: 10px;
+    background-color: #ccc;
+    display: inline-block;
+    position: absolute;
+    top: 5px;
+    left: -7px;
   }
 }
